y.output
Terminais sem uso na gramática

   TOKEN_ERROR


Gramática

    0 $accept: program $end

    1 program: progrElements

    2 progrElements: funcDeclaration progrElements
    3              | varDeclaration progrElements

    4 $@1: %empty

    5 progrElements: $@1

    6 type: KW_CHAR
    7     | KW_INT
    8     | KW_FLOAT

    9 literal: LIT_INTEGER
   10        | LIT_FLOAT
   11        | LIT_CHAR

   12 funcDeclaration: type TK_IDENTIFIER 'd' parameterList 'b' cmd

   13 cmdList: cmd ';' cmdList
   14        | %empty

   15 cmd: attribution
   16    | KW_IF expression KW_THEN cmd
   17    | KW_IF expression KW_THEN cmd KW_ELSE cmd
   18    | KW_WHILE expression cmd
   19    | KW_READ TK_IDENTIFIER
   20    | KW_PRINT printList
   21    | KW_RETURN expression
   22    | '{' cmdList '}'
   23    | %empty

   24 printList: LIT_STRING ',' printList
   25          | expression ',' printList
   26          | LIT_STRING
   27          | expression

   28 parameterList: type TK_IDENTIFIER ',' parameterList
   29              | type TK_IDENTIFIER
   30              | %empty

   31 litList: literal
   32        | literal litList

   33 argList: expression ',' argList
   34        | expression
   35        | %empty

   36 varDeclaration: type TK_IDENTIFIER '=' expression ';'
   37               | type TK_IDENTIFIER 'q' LIT_INTEGER 'p' ';'
   38               | type TK_IDENTIFIER 'q' LIT_INTEGER 'p' ':' litList ';'

   39 attribution: TK_IDENTIFIER '=' expression
   40            | TK_IDENTIFIER 'q' expression 'p' '=' expression

   41 expression: literal
   42           | TK_IDENTIFIER
   43           | TK_IDENTIFIER 'q' expression 'p'
   44           | expression '+' expression
   45           | expression '-' expression
   46           | expression '*' expression
   47           | expression '/' expression
   48           | expression '<' expression
   49           | expression '>' expression
   50           | expression OPERATOR_LE expression
   51           | expression OPERATOR_GE expression
   52           | expression OPERATOR_EQ expression
   53           | expression OPERATOR_OR expression
   54           | expression OPERATOR_AND expression
   55           | OPERATOR_NOT expression
   56           | 'd' expression 'b'
   57           | TK_IDENTIFIER 'd' argList 'b'


Terminais, com as regras onde eles aparecem

$end (0) 0
'*' (42) 46
'+' (43) 44
',' (44) 24 25 28 33
'-' (45) 45
'/' (47) 47
':' (58) 38
';' (59) 13 36 37 38
'<' (60) 48
'=' (61) 36 39 40
'>' (62) 49
'b' (98) 12 56 57
'd' (100) 12 56 57
'p' (112) 37 38 40 43
'q' (113) 37 38 40 43
'{' (123) 22
'}' (125) 22
error (256)
KW_CHAR (258) 6
KW_INT (259) 7
KW_FLOAT (260) 8
KW_IF (261) 16 17
KW_THEN (262) 16 17
KW_ELSE (263) 17
KW_WHILE (264) 18
KW_READ (265) 19
KW_RETURN (266) 21
KW_PRINT (267) 20
OPERATOR_LE (268) 50
OPERATOR_GE (269) 51
OPERATOR_EQ (270) 52
OPERATOR_OR (271) 53
OPERATOR_AND (272) 54
OPERATOR_NOT (273) 55
TK_IDENTIFIER (274) 12 19 28 29 36 37 38 39 40 42 43 57
LIT_INTEGER (275) 9 37 38
LIT_FLOAT (276) 10
LIT_CHAR (277) 11
LIT_STRING (278) 24 26
TOKEN_ERROR (279)
LOWER_THAN_ELSE (280)


Não terminais com as regras onde eles aparecem

$accept (42)
    à esquerda: 0
program (43)
    à esquerda: 1, à direita: 0
progrElements (44)
    à esquerda: 2 3 5, à direita: 1 2 3
$@1 (45)
    à esquerda: 4, à direita: 5
type (46)
    à esquerda: 6 7 8, à direita: 12 28 29 36 37 38
literal (47)
    à esquerda: 9 10 11, à direita: 31 32 41
funcDeclaration (48)
    à esquerda: 12, à direita: 2
cmdList (49)
    à esquerda: 13 14, à direita: 13 22
cmd (50)
    à esquerda: 15 16 17 18 19 20 21 22 23, à direita: 12 13 16 17
    18
printList (51)
    à esquerda: 24 25 26 27, à direita: 20 24 25
parameterList (52)
    à esquerda: 28 29 30, à direita: 12 28
litList (53)
    à esquerda: 31 32, à direita: 32 38
argList (54)
    à esquerda: 33 34 35, à direita: 33 57
varDeclaration (55)
    à esquerda: 36 37 38, à direita: 3
attribution (56)
    à esquerda: 39 40, à direita: 15
expression (57)
    à esquerda: 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57,
    à direita: 16 17 18 21 25 27 33 34 36 39 40 43 44 45 46 47 48
    49 50 51 52 53 54 55 56


Estado 0

    0 $accept: . program $end

    KW_CHAR   deslocar, e ir ao estado 1
    KW_INT    deslocar, e ir ao estado 2
    KW_FLOAT  deslocar, e ir ao estado 3

    $padrão  reduzir usando a regra 4 ($@1)

    program          ir ao estado 4
    progrElements    ir ao estado 5
    $@1              ir ao estado 6
    type             ir ao estado 7
    funcDeclaration  ir ao estado 8
    varDeclaration   ir ao estado 9


Estado 1

    6 type: KW_CHAR .

    $padrão  reduzir usando a regra 6 (type)


Estado 2

    7 type: KW_INT .

    $padrão  reduzir usando a regra 7 (type)


Estado 3

    8 type: KW_FLOAT .

    $padrão  reduzir usando a regra 8 (type)


Estado 4

    0 $accept: program . $end

    $end  deslocar, e ir ao estado 10


Estado 5

    1 program: progrElements .

    $padrão  reduzir usando a regra 1 (program)


Estado 6

    5 progrElements: $@1 .

    $padrão  reduzir usando a regra 5 (progrElements)


Estado 7

   12 funcDeclaration: type . TK_IDENTIFIER 'd' parameterList 'b' cmd
   36 varDeclaration: type . TK_IDENTIFIER '=' expression ';'
   37               | type . TK_IDENTIFIER 'q' LIT_INTEGER 'p' ';'
   38               | type . TK_IDENTIFIER 'q' LIT_INTEGER 'p' ':' litList ';'

    TK_IDENTIFIER  deslocar, e ir ao estado 11


Estado 8

    2 progrElements: funcDeclaration . progrElements

    KW_CHAR   deslocar, e ir ao estado 1
    KW_INT    deslocar, e ir ao estado 2
    KW_FLOAT  deslocar, e ir ao estado 3

    $padrão  reduzir usando a regra 4 ($@1)

    progrElements    ir ao estado 12
    $@1              ir ao estado 6
    type             ir ao estado 7
    funcDeclaration  ir ao estado 8
    varDeclaration   ir ao estado 9


Estado 9

    3 progrElements: varDeclaration . progrElements

    KW_CHAR   deslocar, e ir ao estado 1
    KW_INT    deslocar, e ir ao estado 2
    KW_FLOAT  deslocar, e ir ao estado 3

    $padrão  reduzir usando a regra 4 ($@1)

    progrElements    ir ao estado 13
    $@1              ir ao estado 6
    type             ir ao estado 7
    funcDeclaration  ir ao estado 8
    varDeclaration   ir ao estado 9


Estado 10

    0 $accept: program $end .

    $padrão  aceitar


Estado 11

   12 funcDeclaration: type TK_IDENTIFIER . 'd' parameterList 'b' cmd
   36 varDeclaration: type TK_IDENTIFIER . '=' expression ';'
   37               | type TK_IDENTIFIER . 'q' LIT_INTEGER 'p' ';'
   38               | type TK_IDENTIFIER . 'q' LIT_INTEGER 'p' ':' litList ';'

    'd'  deslocar, e ir ao estado 14
    '='  deslocar, e ir ao estado 15
    'q'  deslocar, e ir ao estado 16


Estado 12

    2 progrElements: funcDeclaration progrElements .

    $padrão  reduzir usando a regra 2 (progrElements)


Estado 13

    3 progrElements: varDeclaration progrElements .

    $padrão  reduzir usando a regra 3 (progrElements)


Estado 14

   12 funcDeclaration: type TK_IDENTIFIER 'd' . parameterList 'b' cmd

    KW_CHAR   deslocar, e ir ao estado 1
    KW_INT    deslocar, e ir ao estado 2
    KW_FLOAT  deslocar, e ir ao estado 3

    $padrão  reduzir usando a regra 30 (parameterList)

    type           ir ao estado 17
    parameterList  ir ao estado 18


Estado 15

   36 varDeclaration: type TK_IDENTIFIER '=' . expression ';'

    OPERATOR_NOT   deslocar, e ir ao estado 19
    TK_IDENTIFIER  deslocar, e ir ao estado 20
    LIT_INTEGER    deslocar, e ir ao estado 21
    LIT_FLOAT      deslocar, e ir ao estado 22
    LIT_CHAR       deslocar, e ir ao estado 23
    'd'            deslocar, e ir ao estado 24

    literal     ir ao estado 25
    expression  ir ao estado 26


Estado 16

   37 varDeclaration: type TK_IDENTIFIER 'q' . LIT_INTEGER 'p' ';'
   38               | type TK_IDENTIFIER 'q' . LIT_INTEGER 'p' ':' litList ';'

    LIT_INTEGER  deslocar, e ir ao estado 27


Estado 17

   28 parameterList: type . TK_IDENTIFIER ',' parameterList
   29              | type . TK_IDENTIFIER

    TK_IDENTIFIER  deslocar, e ir ao estado 28


Estado 18

   12 funcDeclaration: type TK_IDENTIFIER 'd' parameterList . 'b' cmd

    'b'  deslocar, e ir ao estado 29


Estado 19

   55 expression: OPERATOR_NOT . expression

    OPERATOR_NOT   deslocar, e ir ao estado 19
    TK_IDENTIFIER  deslocar, e ir ao estado 20
    LIT_INTEGER    deslocar, e ir ao estado 21
    LIT_FLOAT      deslocar, e ir ao estado 22
    LIT_CHAR       deslocar, e ir ao estado 23
    'd'            deslocar, e ir ao estado 24

    literal     ir ao estado 25
    expression  ir ao estado 30


Estado 20

   42 expression: TK_IDENTIFIER .
   43           | TK_IDENTIFIER . 'q' expression 'p'
   57           | TK_IDENTIFIER . 'd' argList 'b'

    'd'  deslocar, e ir ao estado 31
    'q'  deslocar, e ir ao estado 32

    $padrão  reduzir usando a regra 42 (expression)


Estado 21

    9 literal: LIT_INTEGER .

    $padrão  reduzir usando a regra 9 (literal)


Estado 22

   10 literal: LIT_FLOAT .

    $padrão  reduzir usando a regra 10 (literal)


Estado 23

   11 literal: LIT_CHAR .

    $padrão  reduzir usando a regra 11 (literal)


Estado 24

   56 expression: 'd' . expression 'b'

    OPERATOR_NOT   deslocar, e ir ao estado 19
    TK_IDENTIFIER  deslocar, e ir ao estado 20
    LIT_INTEGER    deslocar, e ir ao estado 21
    LIT_FLOAT      deslocar, e ir ao estado 22
    LIT_CHAR       deslocar, e ir ao estado 23
    'd'            deslocar, e ir ao estado 24

    literal     ir ao estado 25
    expression  ir ao estado 33


Estado 25

   41 expression: literal .

    $padrão  reduzir usando a regra 41 (expression)


Estado 26

   36 varDeclaration: type TK_IDENTIFIER '=' expression . ';'
   44 expression: expression . '+' expression
   45           | expression . '-' expression
   46           | expression . '*' expression
   47           | expression . '/' expression
   48           | expression . '<' expression
   49           | expression . '>' expression
   50           | expression . OPERATOR_LE expression
   51           | expression . OPERATOR_GE expression
   52           | expression . OPERATOR_EQ expression
   53           | expression . OPERATOR_OR expression
   54           | expression . OPERATOR_AND expression

    OPERATOR_LE   deslocar, e ir ao estado 34
    OPERATOR_GE   deslocar, e ir ao estado 35
    OPERATOR_EQ   deslocar, e ir ao estado 36
    OPERATOR_OR   deslocar, e ir ao estado 37
    OPERATOR_AND  deslocar, e ir ao estado 38
    '<'           deslocar, e ir ao estado 39
    '>'           deslocar, e ir ao estado 40
    '+'           deslocar, e ir ao estado 41
    '-'           deslocar, e ir ao estado 42
    '*'           deslocar, e ir ao estado 43
    '/'           deslocar, e ir ao estado 44
    ';'           deslocar, e ir ao estado 45


Estado 27

   37 varDeclaration: type TK_IDENTIFIER 'q' LIT_INTEGER . 'p' ';'
   38               | type TK_IDENTIFIER 'q' LIT_INTEGER . 'p' ':' litList ';'

    'p'  deslocar, e ir ao estado 46


Estado 28

   28 parameterList: type TK_IDENTIFIER . ',' parameterList
   29              | type TK_IDENTIFIER .

    ','  deslocar, e ir ao estado 47

    $padrão  reduzir usando a regra 29 (parameterList)


Estado 29

   12 funcDeclaration: type TK_IDENTIFIER 'd' parameterList 'b' . cmd

    KW_IF          deslocar, e ir ao estado 48
    KW_WHILE       deslocar, e ir ao estado 49
    KW_READ        deslocar, e ir ao estado 50
    KW_RETURN      deslocar, e ir ao estado 51
    KW_PRINT       deslocar, e ir ao estado 52
    TK_IDENTIFIER  deslocar, e ir ao estado 53
    '{'            deslocar, e ir ao estado 54

    $padrão  reduzir usando a regra 23 (cmd)

    cmd          ir ao estado 55
    attribution  ir ao estado 56


Estado 30

   44 expression: expression . '+' expression
   45           | expression . '-' expression
   46           | expression . '*' expression
   47           | expression . '/' expression
   48           | expression . '<' expression
   49           | expression . '>' expression
   50           | expression . OPERATOR_LE expression
   51           | expression . OPERATOR_GE expression
   52           | expression . OPERATOR_EQ expression
   53           | expression . OPERATOR_OR expression
   54           | expression . OPERATOR_AND expression
   55           | OPERATOR_NOT expression .

    $padrão  reduzir usando a regra 55 (expression)


Estado 31

   57 expression: TK_IDENTIFIER 'd' . argList 'b'

    OPERATOR_NOT   deslocar, e ir ao estado 19
    TK_IDENTIFIER  deslocar, e ir ao estado 20
    LIT_INTEGER    deslocar, e ir ao estado 21
    LIT_FLOAT      deslocar, e ir ao estado 22
    LIT_CHAR       deslocar, e ir ao estado 23
    'd'            deslocar, e ir ao estado 24

    $padrão  reduzir usando a regra 35 (argList)

    literal     ir ao estado 25
    argList     ir ao estado 57
    expression  ir ao estado 58


Estado 32

   43 expression: TK_IDENTIFIER 'q' . expression 'p'

    OPERATOR_NOT   deslocar, e ir ao estado 19
    TK_IDENTIFIER  deslocar, e ir ao estado 20
    LIT_INTEGER    deslocar, e ir ao estado 21
    LIT_FLOAT      deslocar, e ir ao estado 22
    LIT_CHAR       deslocar, e ir ao estado 23
    'd'            deslocar, e ir ao estado 24

    literal     ir ao estado 25
    expression  ir ao estado 59


Estado 33

   44 expression: expression . '+' expression
   45           | expression . '-' expression
   46           | expression . '*' expression
   47           | expression . '/' expression
   48           | expression . '<' expression
   49           | expression . '>' expression
   50           | expression . OPERATOR_LE expression
   51           | expression . OPERATOR_GE expression
   52           | expression . OPERATOR_EQ expression
   53           | expression . OPERATOR_OR expression
   54           | expression . OPERATOR_AND expression
   56           | 'd' expression . 'b'

    OPERATOR_LE   deslocar, e ir ao estado 34
    OPERATOR_GE   deslocar, e ir ao estado 35
    OPERATOR_EQ   deslocar, e ir ao estado 36
    OPERATOR_OR   deslocar, e ir ao estado 37
    OPERATOR_AND  deslocar, e ir ao estado 38
    '<'           deslocar, e ir ao estado 39
    '>'           deslocar, e ir ao estado 40
    '+'           deslocar, e ir ao estado 41
    '-'           deslocar, e ir ao estado 42
    '*'           deslocar, e ir ao estado 43
    '/'           deslocar, e ir ao estado 44
    'b'           deslocar, e ir ao estado 60


Estado 34

   50 expression: expression OPERATOR_LE . expression

    OPERATOR_NOT   deslocar, e ir ao estado 19
    TK_IDENTIFIER  deslocar, e ir ao estado 20
    LIT_INTEGER    deslocar, e ir ao estado 21
    LIT_FLOAT      deslocar, e ir ao estado 22
    LIT_CHAR       deslocar, e ir ao estado 23
    'd'            deslocar, e ir ao estado 24

    literal     ir ao estado 25
    expression  ir ao estado 61


Estado 35

   51 expression: expression OPERATOR_GE . expression

    OPERATOR_NOT   deslocar, e ir ao estado 19
    TK_IDENTIFIER  deslocar, e ir ao estado 20
    LIT_INTEGER    deslocar, e ir ao estado 21
    LIT_FLOAT      deslocar, e ir ao estado 22
    LIT_CHAR       deslocar, e ir ao estado 23
    'd'            deslocar, e ir ao estado 24

    literal     ir ao estado 25
    expression  ir ao estado 62


Estado 36

   52 expression: expression OPERATOR_EQ . expression

    OPERATOR_NOT   deslocar, e ir ao estado 19
    TK_IDENTIFIER  deslocar, e ir ao estado 20
    LIT_INTEGER    deslocar, e ir ao estado 21
    LIT_FLOAT      deslocar, e ir ao estado 22
    LIT_CHAR       deslocar, e ir ao estado 23
    'd'            deslocar, e ir ao estado 24

    literal     ir ao estado 25
    expression  ir ao estado 63


Estado 37

   53 expression: expression OPERATOR_OR . expression

    OPERATOR_NOT   deslocar, e ir ao estado 19
    TK_IDENTIFIER  deslocar, e ir ao estado 20
    LIT_INTEGER    deslocar, e ir ao estado 21
    LIT_FLOAT      deslocar, e ir ao estado 22
    LIT_CHAR       deslocar, e ir ao estado 23
    'd'            deslocar, e ir ao estado 24

    literal     ir ao estado 25
    expression  ir ao estado 64


Estado 38

   54 expression: expression OPERATOR_AND . expression

    OPERATOR_NOT   deslocar, e ir ao estado 19
    TK_IDENTIFIER  deslocar, e ir ao estado 20
    LIT_INTEGER    deslocar, e ir ao estado 21
    LIT_FLOAT      deslocar, e ir ao estado 22
    LIT_CHAR       deslocar, e ir ao estado 23
    'd'            deslocar, e ir ao estado 24

    literal     ir ao estado 25
    expression  ir ao estado 65


Estado 39

   48 expression: expression '<' . expression

    OPERATOR_NOT   deslocar, e ir ao estado 19
    TK_IDENTIFIER  deslocar, e ir ao estado 20
    LIT_INTEGER    deslocar, e ir ao estado 21
    LIT_FLOAT      deslocar, e ir ao estado 22
    LIT_CHAR       deslocar, e ir ao estado 23
    'd'            deslocar, e ir ao estado 24

    literal     ir ao estado 25
    expression  ir ao estado 66


Estado 40

   49 expression: expression '>' . expression

    OPERATOR_NOT   deslocar, e ir ao estado 19
    TK_IDENTIFIER  deslocar, e ir ao estado 20
    LIT_INTEGER    deslocar, e ir ao estado 21
    LIT_FLOAT      deslocar, e ir ao estado 22
    LIT_CHAR       deslocar, e ir ao estado 23
    'd'            deslocar, e ir ao estado 24

    literal     ir ao estado 25
    expression  ir ao estado 67


Estado 41

   44 expression: expression '+' . expression

    OPERATOR_NOT   deslocar, e ir ao estado 19
    TK_IDENTIFIER  deslocar, e ir ao estado 20
    LIT_INTEGER    deslocar, e ir ao estado 21
    LIT_FLOAT      deslocar, e ir ao estado 22
    LIT_CHAR       deslocar, e ir ao estado 23
    'd'            deslocar, e ir ao estado 24

    literal     ir ao estado 25
    expression  ir ao estado 68


Estado 42

   45 expression: expression '-' . expression

    OPERATOR_NOT   deslocar, e ir ao estado 19
    TK_IDENTIFIER  deslocar, e ir ao estado 20
    LIT_INTEGER    deslocar, e ir ao estado 21
    LIT_FLOAT      deslocar, e ir ao estado 22
    LIT_CHAR       deslocar, e ir ao estado 23
    'd'            deslocar, e ir ao estado 24

    literal     ir ao estado 25
    expression  ir ao estado 69


Estado 43

   46 expression: expression '*' . expression

    OPERATOR_NOT   deslocar, e ir ao estado 19
    TK_IDENTIFIER  deslocar, e ir ao estado 20
    LIT_INTEGER    deslocar, e ir ao estado 21
    LIT_FLOAT      deslocar, e ir ao estado 22
    LIT_CHAR       deslocar, e ir ao estado 23
    'd'            deslocar, e ir ao estado 24

    literal     ir ao estado 25
    expression  ir ao estado 70


Estado 44

   47 expression: expression '/' . expression

    OPERATOR_NOT   deslocar, e ir ao estado 19
    TK_IDENTIFIER  deslocar, e ir ao estado 20
    LIT_INTEGER    deslocar, e ir ao estado 21
    LIT_FLOAT      deslocar, e ir ao estado 22
    LIT_CHAR       deslocar, e ir ao estado 23
    'd'            deslocar, e ir ao estado 24

    literal     ir ao estado 25
    expression  ir ao estado 71


Estado 45

   36 varDeclaration: type TK_IDENTIFIER '=' expression ';' .

    $padrão  reduzir usando a regra 36 (varDeclaration)


Estado 46

   37 varDeclaration: type TK_IDENTIFIER 'q' LIT_INTEGER 'p' . ';'
   38               | type TK_IDENTIFIER 'q' LIT_INTEGER 'p' . ':' litList ';'

    ';'  deslocar, e ir ao estado 72
    ':'  deslocar, e ir ao estado 73


Estado 47

   28 parameterList: type TK_IDENTIFIER ',' . parameterList

    KW_CHAR   deslocar, e ir ao estado 1
    KW_INT    deslocar, e ir ao estado 2
    KW_FLOAT  deslocar, e ir ao estado 3

    $padrão  reduzir usando a regra 30 (parameterList)

    type           ir ao estado 17
    parameterList  ir ao estado 74


Estado 48

   16 cmd: KW_IF . expression KW_THEN cmd
   17    | KW_IF . expression KW_THEN cmd KW_ELSE cmd

    OPERATOR_NOT   deslocar, e ir ao estado 19
    TK_IDENTIFIER  deslocar, e ir ao estado 20
    LIT_INTEGER    deslocar, e ir ao estado 21
    LIT_FLOAT      deslocar, e ir ao estado 22
    LIT_CHAR       deslocar, e ir ao estado 23
    'd'            deslocar, e ir ao estado 24

    literal     ir ao estado 25
    expression  ir ao estado 75


Estado 49

   18 cmd: KW_WHILE . expression cmd

    OPERATOR_NOT   deslocar, e ir ao estado 19
    TK_IDENTIFIER  deslocar, e ir ao estado 20
    LIT_INTEGER    deslocar, e ir ao estado 21
    LIT_FLOAT      deslocar, e ir ao estado 22
    LIT_CHAR       deslocar, e ir ao estado 23
    'd'            deslocar, e ir ao estado 24

    literal     ir ao estado 25
    expression  ir ao estado 76


Estado 50

   19 cmd: KW_READ . TK_IDENTIFIER

    TK_IDENTIFIER  deslocar, e ir ao estado 77


Estado 51

   21 cmd: KW_RETURN . expression

    OPERATOR_NOT   deslocar, e ir ao estado 19
    TK_IDENTIFIER  deslocar, e ir ao estado 20
    LIT_INTEGER    deslocar, e ir ao estado 21
    LIT_FLOAT      deslocar, e ir ao estado 22
    LIT_CHAR       deslocar, e ir ao estado 23
    'd'            deslocar, e ir ao estado 24

    literal     ir ao estado 25
    expression  ir ao estado 78


Estado 52

   20 cmd: KW_PRINT . printList

    OPERATOR_NOT   deslocar, e ir ao estado 19
    TK_IDENTIFIER  deslocar, e ir ao estado 20
    LIT_INTEGER    deslocar, e ir ao estado 21
    LIT_FLOAT      deslocar, e ir ao estado 22
    LIT_CHAR       deslocar, e ir ao estado 23
    LIT_STRING     deslocar, e ir ao estado 79
    'd'            deslocar, e ir ao estado 24

    literal     ir ao estado 25
    printList   ir ao estado 80
    expression  ir ao estado 81


Estado 53

   39 attribution: TK_IDENTIFIER . '=' expression
   40            | TK_IDENTIFIER . 'q' expression 'p' '=' expression

    '='  deslocar, e ir ao estado 82
    'q'  deslocar, e ir ao estado 83


Estado 54

   22 cmd: '{' . cmdList '}'

    KW_IF          deslocar, e ir ao estado 48
    KW_WHILE       deslocar, e ir ao estado 49
    KW_READ        deslocar, e ir ao estado 50
    KW_RETURN      deslocar, e ir ao estado 51
    KW_PRINT       deslocar, e ir ao estado 52
    TK_IDENTIFIER  deslocar, e ir ao estado 53
    '{'            deslocar, e ir ao estado 54

    ';'       reduzir usando a regra 23 (cmd)
    $padrão  reduzir usando a regra 14 (cmdList)

    cmdList      ir ao estado 84
    cmd          ir ao estado 85
    attribution  ir ao estado 56


Estado 55

   12 funcDeclaration: type TK_IDENTIFIER 'd' parameterList 'b' cmd .

    $padrão  reduzir usando a regra 12 (funcDeclaration)


Estado 56

   15 cmd: attribution .

    $padrão  reduzir usando a regra 15 (cmd)


Estado 57
